--- a/app/webroot/css/styles.css
+++ b/app/webroot/css/styles.css
@@ -503,7 +503,6 @@ div.actions a:hover, a.cancelar:hover {
 /** FORMS **/
 .form label {
 	clear: left;
-	float: left;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 13px;
 	font-weight: bold;
@@ -511,7 +510,7 @@ div.actions a:hover, a.cancelar:hover {
 	margin-top: 11px;
 	text-align: left;
 	text-transform: capitalize;
-	width: 150px;
+	display: block;
 }
 .form input, form textarea, form .input input {
 	float: left;
@@ -754,9 +753,7 @@ form .input {
 	color: #444;
 }
 form .input label {
-	float: left;
-	width: 130px;
-	margin-top: 11px;
+	margin-top: 5px;
 }
 form .input input {
 	float: left;
