--- a/app/webroot/css/styles.css
+++ b/app/webroot/css/styles.css
@@ -54,13 +54,27 @@ h2 { /*Titulos Secundarios*/
 	font-size: 14px;
 	text-transform: uppercase;
 	font-weight: bold;
-	float: left;
+
 }
 h3 { /*SubTttulos principales*/
 	font-size: 165%;
 }
 h4 { /*SubTttulos secundarios*/
 	font-weight: normal;
+}
+dt{
+	font-weight: bold;
+	float:left;
+	width:30%;
+	clear:left;
+}
+dd{
+	float:left;
+	width:70%;
+}
+#layout_mapas dl{
+	width: 50%;
+	float:left;
 }
 ul, li {
 }
@@ -306,7 +320,7 @@ ul .panel a {
 	font-size: 12px;
 	margin-bottom: 10px;
 }
-.actions {
+.actions, .related {
 	margin-top: 20px;
 	clear: both;
 }
