--- a/app/webroot/css/styles.css
+++ b/app/webroot/css/styles.css
@@ -531,7 +531,7 @@ div.actions a:hover, a.cancelar:hover {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 13px;
 	font-weight: bold;
-	width: 300px;
+	width: 98%;
 	clear: none;
 	padding-left: 4px;
 }
@@ -771,7 +771,7 @@ form .input label {
 }
 form .input input {
 	float: left;
-	width: 300px;
+	width: 98%;
 	clear: none;
 	font-size: 14px;
 }
